fix: fix edit-box alignment issues

--- a/public/css/desktop/DT-profile.css
+++ b/public/css/desktop/DT-profile.css
@@ -166,7 +166,7 @@
 .edit-box {
     display: none;
     position: absolute;
-    width: 7vw;
+    width: 75%;
     font-family: "Asap Condensed", sans-serif;
     font-weight: 700;
     font-size: 1rem;
