--- a/public/css/mobile/M-trainer-collection.css
+++ b/public/css/mobile/M-trainer-collection.css
@@ -116,7 +116,7 @@ h1 {
     width: 80%;
     font-family: "Asap Condensed", sans-serif;
     font-weight: 600;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     padding-left: 0;
     margin-left: -2px;
     background-color: #cc0000;
@@ -138,7 +138,7 @@ h1 {
 .collection-label {
     background-color: #cc0000;
     color: white;
-    padding: 5px 10px;
+    padding: 6px 10px;
     width: 100%;
 }
 
